--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <h1>{{title}}</h1>
 <div>{{description}}</div>
 <nav>
-  <a routerLink="/dashboard">Party Planner</a>
-  <a routerLink="/heroes">Local Chef</a>
+  <a routerLink="/partyplanner">Party Planner</a>
+  <a routerLink="/localchef">Local Chef</a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
