4 files modified, 5 added

--- a/src/app/local-chef/local-chef.component.html
+++ b/src/app/local-chef/local-chef.component.html
@@ -1,1 +1,7 @@
-<p>local-chef works!</p>
+<h2> {{title}}</h2>
+<div>{{description}}</div>
+<nav>
+  <a routerLink="/partyplanner"> Sign In</a>
+  <a routerLink="/localchef"> Register </a>
+</nav>
+<router-outlet></router-outlet>
